<resources>
    <string name="app_name">Fdata</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="query"/>
    <string name="query_button">Query</string>
    <string name="round">Round:</string>
    <string name="circuit">Circuit:</string>
    <string name="url">URL:</string>
    <string name="date">Date:</string>
    <string name="country">Country:</string>
    <string name="race_name">Race Name:</string>
</resources>