<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
>
    <data>
        <variable
                name="race"
                type="com.rica91935.fdata.data.Race" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/round"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

            </TextView>

            <TextView
                    android:text="@{race.round}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            >
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/circuit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </TextView>

            <TextView
                    android:text="@{race.circuit.circuitName}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </TextView>

            <TextView
                    android:text="@{race.url}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
            >
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </TextView>

            <TextView
                    android:text="@{race.date}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
            </TextView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </TextView>

            <TextView
                    android:text="@{race.circuit.location.country}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/race_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </TextView>

            <TextView
                    android:text="@{race.raceName}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
            </TextView>
        </LinearLayout>

        <org.osmdroid.views.MapView
                android:id="@+id/map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

    </LinearLayout>
</layout>